# threads-scraper

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  stack.env
config/: settings.yaml
src/: api_server.py  main.py
src/scraper/: threads_scraper.py
tests/: test_api_server.py
