[project]
name = "threads-scraper"
version = "1.0.0"
description = "Threads social media scraper for election monitoring"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "pandas>=2.2.2",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx2>=0.28.0",
]

[tool.uv]
dev-dependencies = []
